--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
   "type": "module",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.4.1"
   },
   "devDependencies": {
     "vite": "^5.2.0",
