--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,15 @@ cython_debug/
 .cursorindexingignore
 backend/app.db
 
+# Node.js
+node_modules/
+frontend/node_modules/
+.npm
+.yarn
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.eslintcache
+
+node_modules
