--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,21 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.15.0",
+    "chart.js": "^4.4.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.4.1"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.0.4"
+    "@vitejs/plugin-react": "^4.0.4",
+    "vite": "^5.2.0"
   }
 }
